test/datalog_tests/constr.fail.ast.expected
error: failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 2, column 23):
unexpected '{'
expecting "#", "import", "typedef", "extern", "input", "output", "relation", "stream", "multiset", "index", "function", "transformer", variable name, "&", relation name, "apply", "for" or end of input

error: ./test/datalog_tests/constr.fail.dl:4.13-4.29: Multiple definitions of constructor C at the following locations:
  ./test/datalog_tests/constr.fail.dl:4.13-4.29
  ./test/datalog_tests/constr.fail.dl:5.13-7.1
typedef t = C { f: bigint } |
            ^^^^^^^^^^^^^^^^

error: failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 9):
unexpected "("
expecting end of "function" or function name

error: failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 34):
unexpected "{"
expecting "::", "<", "," or "}"

error: failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 10):
unexpected F
expecting function name

error: ./test/datalog_tests/constr.fail.dl:4.15-7.1: Field x is declared with different types
typedef Alt = C0{x: bit<16>}
              ^

error: ./test/datalog_tests/constr.fail.dl:4.1-7.1: The following type variables are not used in type definition: D
typedef Parameterized<'A,'B,'C,'D> = Option1{x: 'A}
^

error: ./test/datalog_tests/constr.fail.dl:6.54-7.1: Unknown module vm.  Did you forget to import it?
